<resources>
    <string name="app_name">YoMesero Restaurantes</string>

    <string name="hello_world">Bienvenidos a YoMesero</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_item_form">Crear item</string>
    <string name="item_name_message">Ingrese el nombre</string>
    <string name="item_description_message">Ingrese la descripcion</string>
    <string name="item_type_message">Ingrese el tipo</string>
    <string name="item_time_message">Ingrese el tiempo</string>
    <string name="item_price_message">Ingrese el precio</string>
    <string name="create_button">Crear item</string>
    <string name="title_activity_display_item">Item Created</string>
</resources>
