<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <EditText
        android:id="@+id/item_name"
        android:layout_width="271dp"
        android:layout_height="wrap_content"
        android:hint="@string/item_name_message"
        android:inputType="textCapSentences|textAutoCorrect"
        android:layout_gravity="center_horizontal"
        android:autoText="false"
        android:backgroundTint="#52A1BF" />

    <EditText
        android:id="@+id/item_description"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:hint="@string/item_description_message"
        android:inputType="textCapSentences|textAutoCorrect"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="#52A1BF" />

    <EditText
        android:id="@+id/item_type"
        android:layout_width="271dp"
        android:layout_height="wrap_content"
        android:hint="@string/item_type_message"
        android:inputType="textCapSentences|textAutoCorrect"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="#52A1BF" />
    <EditText
        android:id="@+id/item_time"
        android:layout_width="271dp"
        android:layout_height="wrap_content"
        android:hint="@string/item_time_message"
        android:inputType="phone"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="#52A1BF" />

    <EditText
        android:id="@+id/item_price"
        android:layout_width="271dp"
        android:layout_height="wrap_content"
        android:hint="@string/item_price_message"
        android:inputType="phone"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="#52A1BF" />

    <Button
        android:layout_width="189dp"
        android:layout_height="wrap_content"
        android:text="@string/create_button"
        android:onClick="createItem"
        android:background="#ff198642"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp" />
</LinearLayout>
